@@ -1,5 +1,12 @@
 2008-01-21  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-wired.c
+		- (add_connection_items): s/disabled/carrier; flip meaning
+		- (wired_add_menu_item): s/disabled/carrier; flip meaning.  It's more
+			clear this way.  (gnome.org #511099)
+
+2008-01-21  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-gsm.c
 		- (gsm_new_auto_connection): actually add the GSM setting to the
 			connection object so it's valid
